--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,14 @@
         "illuminate/support": "5.0.*",
         "elasticsearch/elasticsearch": "~1.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~4.0"
+    },
     "autoload": {
+        "classmap": [
+            "database",
+            "tests/TestCase.php"
+        ],
         "psr-0": {
             "Tamayo\\Stretchy": "src/"
         }
