--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,15 @@
         "elasticsearch/elasticsearch": "~1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0"
+        "phpunit/phpunit": "~4.0",
+        "mockery/mockery": "0.9.2"
     },
     "autoload": {
         "classmap": [
             "tests"
         ],
         "psr-0": {
-            "Tamayo\\Stretchy": "src/"
+            "Tamayo\\Stretchy\\": "src/"
         }
     },
     "minimum-stability": "dev"
