--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: Stretchy
 theme: readthedocs
+use_directory_urls: false
 pages:
 - ['index.md', 'Home']
 - ['getting_started.md', 'Getting Started']
-- ['reference/index.md', 'Reference']
 - ['reference/index_operations.md', 'Reference', 'Index Operations']
